--- a/CrMoW.tex
+++ b/CrMoW.tex
@@ -63,45 +63,80 @@
 	 T$_v$ [$^\circ$C] & 2671 & 4639 & 5930 \\\hline
 	 T$_t$ [$^\circ$C] & 1907 & 2623 & 3422 \\\hline
 	 Objev & 1794 & 1778 & 1802 \\\hline
-	 & stříbrný & šedý & šedobílý \\
-	 & \begin{minipage}{.2\textwidth}
+	 & stříbrný\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Chromium_crystals_and_1cm3_cube.jpg}{Alchemist-hp/Commons}}
+	 & šedý\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Molybdenum_crystaline_fragment_and_1cm3_cube.jpg}{Alchemist-hp/Commons}}
+	 & šedobílý\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Wolfram_evaporated_crystals_and_1cm3_cube.jpg}{Alchemist-hp/Commons}}  \\
+	 & \begin{minipage}{.25\textwidth}
 	 	\adjincludegraphics[width=\linewidth]{img/Chromium.jpg}
 	 \end{minipage}
-	 	& \begin{minipage}{.2\textwidth}
+	 	& \begin{minipage}{.25\textwidth}
 	 		\adjincludegraphics[width=\linewidth]{img/Molybdenum.jpg}
-	 	\end{minipage} & \begin{minipage}{.2\textwidth}
+	 	\end{minipage} & \begin{minipage}{.25\textwidth}
 	 	\adjincludegraphics[width=\linewidth]{img/Tungsten.jpg} \end{minipage} \\\hline
 	\end{tabular}
-	\begin{itemize}
-	\item \textit{Seaborgium}
-	\begin{itemize}
-		\item Umělý prvek, transuran, protonové číslo 106, Sg.
-		\item Poprvé byl připraven v roce 1971:
-		\item \ce{^{208}_{82}Pb + ^{54}_{24}Cr -> ^{260}_{106}Sg + 2 n}
-		\item \ce{^{207}_{82}Pb + ^{54}_{24}Cr -> ^{260}_{106}Sg + n}
-		\item Bylo pojmenován po americkém chemikovi Glennu T. Seaborgovi, který získal Nobelovu cenu za objev plutonia.\footnote[frame]{\href{https://www.nobelprize.org/prizes/chemistry/1951/seaborg/facts/}{Glenn T. Seaborg}}
-		\item Název byl schválen roku 1997.\footnote[frame]{\href{https://doi.org/10.1351/pac199769122471}{Names and symbols of transfermium elements (IUPAC Recommendations 1997)}}
-	\end{itemize}
-	\end{itemize}
 	\vfill
+}
+
+\frame{
+	\frametitle{}
+	\begin{columns}
+		\begin{column}{.7\textwidth}
+			\vfill
+			\textbf{Seaborgium}
+			\begin{itemize}
+				\item Umělý prvek, transuran, protonové číslo 106, Sg.
+				\item Poprvé byl připraven v roce 1971:
+				\item \ce{^{208}_{82}Pb + ^{54}_{24}Cr -> ^{260}_{106}Sg + 2 n}
+				\item \ce{^{207}_{82}Pb + ^{54}_{24}Cr -> ^{260}_{106}Sg + n}
+				\item Bylo pojmenován po americkém chemikovi Glennu T. Seaborgovi, který získal Nobelovu cenu za objev plutonia.\footnote[frame]{\href{https://www.nobelprize.org/prizes/chemistry/1951/seaborg/facts/}{Glenn T. Seaborg}}
+				\item Název byl schválen roku 1997.\footnote[frame]{\href{https://doi.org/10.1351/pac199769122471}{Names and symbols of transfermium elements (IUPAC Recommendations 1997)}}
+			\end{itemize}
+			\vfill
+		\end{column}
+		\begin{column}{.35\textwidth}
+			\begin{figure}
+				\adjincludegraphics[width=.6\textwidth]{img/Glenn_Seaborg.jpg}
+				\caption*{Glenn Seaborg.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Glenn_Seaborg_-_1964.jpg}{Atomic Energy Commission/Commons}}}
+			\end{figure}
+
+			\begin{center}
+				\begin{tabular}{|l|l|}
+					\hline
+					$^{265}$Sg & 8,9 s \\\hline
+					$^{265m}$Sg & 16,2 s \\\hline
+					$^{265}$Sg & 8,9 s \\\hline
+					$^{265}$Sg & 8,9 s \\\hline
+					$^{265}$Sg & 8,9 s \\\hline
+					$^{265}$Sg & 8,9 s \\\hline
+				\end{tabular}
+			\end{center}
+		\end{column}
+	\end{columns}
 }
 
 \section{Chemické a fyzikální vlastnosti}
 \frame{
 	\frametitle{}
-	\vfill
-	\begin{itemize}
-		\item Všechny tři prvky mají více stabilních izotopů, to omezuje maximální přesnost stanovení atomové hmotnosti.
-		\item Byly objeveny na konci 18. století.
-		\item Krystalují v tělesně centrované kubické mřížce (BCC).
-		\item Jsou stříbrobílé, lesklé. V čistém stavu jsou poměrně měkké.
-		\item Chrom je jediný prvek, který je za laboratorní teploty \textit{antiferomagnetický}.\footnote[frame]{\href{https://doi.org/10.1103/RevModPhys.60.209}{Spin-density-wave antiferromagnetism in chromium}}
-		\item Wolfram má nejvyšší teplotu tání z kovů.
-	\end{itemize}
-	\begin{figure}
-		\adjincludegraphics[height=.4\textheight]{img/Cubic-body-centered.png}
-	\end{figure}
-	\vfill
+	\begin{columns}
+		\begin{column}{.7\textwidth}
+			\vfill
+			\begin{itemize}
+				\item Všechny tři prvky mají více stabilních izotopů, to omezuje maximální přesnost stanovení atomové hmotnosti.
+				\item Byly objeveny na konci 18. století.
+				\item Krystalují v tělesně centrované kubické mřížce (BCC).
+				\item Jsou stříbrobílé, lesklé. V čistém stavu jsou poměrně měkké.
+				\item Chrom je jediný prvek, který je za laboratorní teploty \textit{antiferomagnetický}.\footnote[frame]{\href{https://doi.org/10.1103/RevModPhys.60.209}{Spin-density-wave antiferromagnetism in chromium}}
+				\item Wolfram má nejvyšší teplotu tání z kovů.
+			\end{itemize}
+			\vfill
+		\end{column}
+		\begin{column}{.35\textwidth}
+			\begin{figure}
+				\adjincludegraphics[height=.4\textheight]{img/Cubic-body-centered.png}
+				\caption*{BCC.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Cubic-body-centered.svg}{Daniel Mayer, DrBob/Commons}}}
+			\end{figure}
+		\end{column}
+	\end{columns}
 }
 
 \frame{
@@ -118,8 +153,8 @@
 	\end{column}
 	\begin{column}{.3\textwidth}
 		\begin{figure}
-			\adjincludegraphics[width=\textwidth]{img/Louis_Néel_1970b.jpg}
-			\caption*{Louis Néel}
+			\adjincludegraphics[width=.8\textwidth]{img/Louis_Néel_1970b.jpg}
+			\caption*{Louis Néel.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Louis_Néel_1970b.jpg}{Farabola/Commons}}}
 		\end{figure}
 		\begin{figure}
 			\adjincludegraphics[width=\textwidth]{img/Antiferromagnetic_ordering.png}
@@ -135,7 +170,7 @@
 	\frametitle{}
 	\vfill
 	\begin{columns}
-		\begin{column}{.6\textwidth}
+		\begin{column}{.72\textwidth}
 			\begin{itemize}
 				\item Bylo pojmenován po americkém chemikovi Glennu T. Seaborgovi,\footnote[frame]{\href{https://www.atomicheritage.org/profile/glenn-seaborg}{Glenn Seaborg}} který získal Nobelovu cenu za objev plutonia.\footnote[frame]{\href{https://www.nobelprize.org/prizes/chemistry/1951/summary/}{Nobelova cena za chemii 1951}}
 				\item Název byl schválen roku 1997.\footnote[frame]{\href{https://doi.org/10.1351/pac199769122471}{Names and symbols of transfermium elements (IUPAC Recommendations 1997)}}
@@ -145,9 +180,10 @@
 				\item \ce{^{248}Cm + ^{22}Ne -> ^{265}Sg + 5 n}
 			\end{itemize}
 		\end{column}
-		\begin{column}{.4\textwidth}
+		\begin{column}{.3\textwidth}
 			\begin{figure}
 				\adjincludegraphics[width=\textwidth]{img/Seaborg_in_lab_-_restoration.jpg}
+				\caption*{Glenn Seaborg.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Seaborg_in_lab_-_restoration.jpg}{Berkeley Laboratory/Commons}}}
 			\end{figure}
 		\end{column}
 	\end{columns}
@@ -158,7 +194,7 @@
 	\frametitle{}
 	\vfill
 	\begin{itemize}
-		\item Chemické vlastnosti nejsou příliš prozkoumány.
+		\item Chemické vlastnosti seaborgia nejsou příliš prozkoumány.
 		\item Za vyšší teploty reaguje s kyslíkem a chlorovodíkem za vzniku oxychloridu:
 		\item \ce{Sg + O2 + 2 HCl -> SgO2Cl2 + H2}
 		\item Reakcí s kyslíkem poskytuje oxid:
@@ -174,17 +210,25 @@
 \subsection{Chrom}
 \frame{
 	\frametitle{}
-	\vfill
-	\begin{itemize}
-		\item Zastoupení chromu v zemské kůře je srovnatelné s vanadem a chlorem, pohybuje se kolem 122~ppm. Ostatní dva prvky jsou podstatně vzácnější.
-		\item Známe téměř 300 minerálů obsahujících chrom.\footnote[frame]{\href{https://www.mindat.org/element/Chromium}{The mineralogy of Chromium}}
-		\item Hlavní rudou chromu je chromit, \ce{Fe^{2+}Cr$^{3+}_2$O4}.
-		\item Další důležité minerály jsou magnesiochromit \ce{MgCr2O4} a uvarovit \ce{Ca3Cr2(SiO4)3}.
-		\item Hlavními producenty chromu jsou Jižní Afrika, Kazachstán, Turecko a Indie.
-	\end{itemize}
-	\begin{figure}
-	\adjincludegraphics[height=.4\textheight]{img/Chromium_-_world_production_trend.png}
-	\end{figure}
+	\begin{columns}
+		\begin{column}{.72\textwidth}
+			\vfill
+			\begin{itemize}
+				\item Zastoupení chromu v zemské kůře je srovnatelné s vanadem a chlorem, pohybuje se kolem 122~ppm. Ostatní dva prvky jsou podstatně vzácnější.
+				\item Známe téměř 300 minerálů obsahujících chrom.\footnote[frame]{\href{https://www.mindat.org/element/Chromium}{The mineralogy of Chromium}}
+				\item Hlavní rudou chromu je chromit, \ce{Fe^{2+}Cr$^{3+}_2$O4}.
+				\item Další důležité minerály jsou magnesiochromit \ce{MgCr2O4} a uvarovit \ce{Ca3Cr2(SiO4)3}.
+				\item Hlavními producenty chromu jsou Jižní Afrika, Kazachstán, Turecko a Indie.
+			\end{itemize}
+			\vfill
+		\end{column}
+		\begin{column}{.3\textwidth}
+			\begin{figure}
+				\adjincludegraphics[height=.3\textheight]{img/Chromium_-_world_production_trend.png}
+				\caption*{Vývoj výroby chromu.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Chromium_-_world_production_trend.svg}{U.S. Geological Survey/Commons}}}
+			\end{figure}
+		\end{column}
+	\end{columns}
 	\vfill
 }
 
