--- a/CrMoW.tex
+++ b/CrMoW.tex
@@ -244,11 +244,13 @@
 	\begin{column}{.5\textwidth}
 		\begin{figure}
 		\adjincludegraphics[height=.4\textheight]{img/Chromite_-_USGS_Mineral_Specimens_296.jpg}
+		\caption*{Chromit.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Chromite_-_USGS_Mineral_Specimens_296.jpg}{Andrew Silver/Commons}}}
 	\end{figure}
 	\end{column}
 	\begin{column}{.5\textwidth}
 	\begin{figure}
 		\adjincludegraphics[height=.4\textheight]{img/Ben_Bow_chromite_mine_1942a.jpg}
+		\caption*{Chromitový důl v Montaně.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Ben_Bow_chromite_mine_1942a.jpg}{Russell Lee/Commons}}}
 	\end{figure}
 	\end{column}
 	\end{columns}
@@ -265,6 +267,7 @@
 	\end{itemize}
 	\begin{figure}
 		\adjincludegraphics[height=.4\textheight]{img/Magnesiochromite-474053.jpg}
+		\caption*{Magnesiochromit.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Magnesiochromite-474053.jpg}{John Sobolewski/Commons}}}
 	\end{figure}
 	\vfill
 }
@@ -281,12 +284,14 @@
 	\begin{columns}
 		\begin{column}{.7\textwidth}
 			\begin{figure}
-				\adjincludegraphics[height=.4\textheight]{img/Amesite,_uvarovite_1100FS.2015.jpg}
+				\adjincludegraphics[height=.3\textheight]{img/Amesite,_uvarovite_1100FS.2015.jpg}
+				\caption*{Magnesiochromit.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Amesite,_uvarovite_1100FS.2015.jpg}{Géry PARENT/Commons}}}
 			\end{figure}
 		\end{column}
 		\begin{column}{.3\textwidth}
 			\begin{figure}
-				\adjincludegraphics[height=.4\textheight]{img/Uvarov_the_elder.jpg}
+				\adjincludegraphics[height=.3\textheight]{img/Uvarov_the_elder.jpg}
+				\caption*{Sergey Uvarov.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Uvarov_the_elder.jpg}{Orest Kiprenskij/Commons}}}
 			\end{figure}
 		\end{column}
 	\end{columns}
@@ -305,11 +310,13 @@
 		\begin{column}{.6\textwidth}
 			\begin{figure}
 				\adjincludegraphics[height=.4\textheight]{img/Crocoite_Dundas2p.jpg}
+				\caption*{Krokoit, Austrálie.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Croco\%C3\%AFte_Dundas2p.jpg}{Didier Descouens/Commons}}}
 			\end{figure}
 		\end{column}
 		\begin{column}{.4\textwidth}
 			\begin{figure}
 				\adjincludegraphics[height=.4\textheight]{img/Crocoite-218845.jpg}
+				\caption*{Krokoit, Austrálie.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Crocoite-218845.jpg}{Rock Currier/Commons}}}
 			\end{figure}
 		\end{column}
 	\end{columns}
@@ -321,7 +328,7 @@
 	\vfill
 	\begin{itemize}
 		\item Chrom se vyrábí buď v kovové formě nebo přímo jako slitina \textit{ferrochrom}.\footnote[frame]{\href{https://www.sciencedirect.com/topics/materials-science/ferrochrome}{Ferrochrome -- ScienceDirect}}
-		\item Kovový chrom se vyrábí redukcí oxidu chromitého křemíkem nebo hliníkem\footnote[frame]{\href{https://youtu.be/nEzH_499mTo}{Make Thermite from Chromium Oxide}}:
+		\item Kovový chrom se vyrábí redukcí oxidu chromitého křemíkem nebo hliníkem:\footnote[frame]{\href{https://youtu.be/nEzH_499mTo}{Make Thermite from Chromium Oxide}}
 	\end{itemize}
 	\begin{align*}
 		\ce{2 Cr2O3 + 3 Si &-> 4 Cr + 3 SiO2}\\
@@ -348,7 +355,8 @@
 		\item Většina vyrobeného ferrochromu se využívá pro výrobu nerezové oceli, která obsahuje přibližně 18~\% chromu.
 	\end{itemize}
 	\begin{figure}
-	\adjincludegraphics[height=.4\textheight]{img/Ferrochrome.jpg}
+		\adjincludegraphics[height=.35\textheight]{img/Ferrochrome.jpg}
+		\caption*{Ferrochrom.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Ferrochrome.JPG}{FocalPoint/Commons}}}
 	\end{figure}
 	\vfill
 }
@@ -356,18 +364,25 @@
 \subsection{Molybden}
 \frame{
 	\frametitle{}
-	\vfill
-	\begin{itemize}
-		\item Zastoupení molybdenu v zemské kůře je asi 1,5~ppm.
-		\item Známe téměř padesát minerálů obsahujících molybden.
-		\item Průmyslově nejdůležitějším minerálem je molybdenit, \ce{MoS2}.
-		\item Největšími producenty jsou Čína, USA a Chile.
-		\item Kromě molybdenitu se získává molybden jako vedlejší produkt výroby mědi a wolframu.
-	\end{itemize}
-	\begin{figure}
-	\adjincludegraphics[height=.4\textheight]{img/Molybdenum_world_production.png}
-	\end{figure}
-	\vfill
+	\begin{columns}
+		\begin{column}{.6\textwidth}
+			\vfill
+			\begin{itemize}
+				\item Zastoupení molybdenu v zemské kůře je asi 1,5~ppm.
+				\item Známe téměř padesát minerálů obsahujících molybden.
+				\item Průmyslově nejdůležitějším minerálem je molybdenit, \ce{MoS2}.
+				\item Největšími producenty jsou Čína, USA a Chile.
+				\item Kromě molybdenitu se získává molybden jako vedlejší produkt výroby mědi a wolframu.
+			\end{itemize}
+			\vfill
+		\end{column}
+		\begin{column}{.4\textwidth}
+			\begin{figure}
+				\adjincludegraphics[height=.4\textheight]{img/Molybdenum_world_production.png}
+				\caption*{Objem celosvětové výroby molybdenu.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Molybdenum_world_production.svg}{Con-struct/Commons}}}
+			\end{figure}
+		\end{column}
+	\end{columns}
 }
 
 \frame{
@@ -381,6 +396,7 @@
 	\end{itemize}
 	\begin{figure}
 		\adjincludegraphics[height=.4\textheight]{img/Knaben_gruvor.jpg}
+		\caption*{Důl Knaben.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Knaben_gruvor.jpg}{91/Commons}}}
 	\end{figure}
 	\vfill
 }
@@ -397,12 +413,14 @@
 	\begin{columns}
 		\begin{column}{.5\textwidth}
 			\begin{figure}
-				\adjincludegraphics[height=.4\textheight]{img/Molybdenite.jpg}
+				\adjincludegraphics[height=.3\textheight]{img/Molybdenite.jpg}
+				\caption*{Molybdenit.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Molybdenite.jpg}{Svdmolen/Commons}}}
 			\end{figure}
 		\end{column}
 		\begin{column}{.5\textwidth}
 			\begin{figure}
-				\adjincludegraphics[height=.4\textheight]{img/Molybdenite_quebec2.jpg}
+				\adjincludegraphics[height=.3\textheight]{img/Molybdenite_quebec2.jpg}
+				\caption*{Molybdenit na křemeni.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Molybdenite_quebec2.jpg}{Didier Descouens/Commons}}}
 			\end{figure}
 		\end{column}
 	\end{columns}
@@ -413,8 +431,8 @@
 	\frametitle{}
 	\vfill
 	\begin{figure}
-		\adjincludegraphics[height=.75\textheight]{img/Kristallradio.jpg}
-		\caption*{Hrotová dioda z rádia užívaná před 2. světovou válkou}
+		\adjincludegraphics[height=.65\textheight]{img/Kristallradio.jpg}
+		\caption*{Hrotová dioda z rádia užívaná před 2. světovou válkou.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Kristallradio_(3).jpg}{Holger.Ellgaard/Commons}}}
 	\end{figure}
 	\vfill
 }
@@ -430,12 +448,14 @@
 	\begin{columns}
 		\begin{column}{.5\textwidth}
 			\begin{figure}
-				\adjincludegraphics[height=.4\textheight]{img/Calcite-Wulfenite-tcw15a.jpg}
+				\adjincludegraphics[height=.35\textheight]{img/Calcite-Wulfenite-tcw15a.jpg}
+				\caption*{Wulfenit na kalcitu.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Calcite-Wulfenite-tcw15a.jpg}{Robert M. Lavinsky/Commons}}}
 			\end{figure}
 		\end{column}
 		\begin{column}{.5\textwidth}
 			\begin{figure}
-				\adjincludegraphics[height=.4\textheight]{img/Maroc_Wulfénite.jpg}
+				\adjincludegraphics[height=.35\textheight]{img/Maroc_Wulfénite.jpg}
+				\caption*{Wulfenit, Maroko.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Maroc_Wulfénite.jpg}{Didier Descouens/Commons}}}
 			\end{figure}
 		\end{column}
 	\end{columns}
@@ -454,12 +474,14 @@
 	\begin{columns}
 		\begin{column}{.5\textwidth}
 			\begin{figure}
-				\adjincludegraphics[height=.4\textheight]{img/Powellite-23107.jpg}
+				\adjincludegraphics[height=.35\textheight]{img/Powellite-23107.jpg}
+				\caption*{Powelit, Chile.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Powellite-k336b.jpg}{Robert M. Lavinsky/Commons}}}
 			\end{figure}
 		\end{column}
 		\begin{column}{.5\textwidth}
 			\begin{figure}
-				\adjincludegraphics[height=.4\textheight]{img/Powellite-k336b.jpg}
+				\adjincludegraphics[height=.35\textheight]{img/Powellite-k336b.jpg}
+				\caption*{Powelit, Indie.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Powellite-23107.jpg}{Robert M. Lavinsky/Commons}}}
 			\end{figure}
 		\end{column}
 	\end{columns}
@@ -506,7 +528,8 @@
 		\item Hlavní naleziště jsou v Číně, USA, Jižní Koreji a na území bývalého SSSR.
 	\end{itemize}
 	\begin{figure}
-	\adjincludegraphics[height=.4\textheight]{img/Arc_W.jpg}
+		\adjincludegraphics[height=.3\textheight]{img/Arc_W.jpg}
+		\caption*{Wolframová elektroda.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Arc_W.jpg}{2x910/Commons}}}
 	\end{figure}
 	\vfill
 }
@@ -523,11 +546,13 @@
 		\begin{column}{.4\textwidth}
 			\begin{figure}
 				\adjincludegraphics[height=.4\textheight]{img/wolframite.jpg}
+				\caption*{Wolframit.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Wolframite.jpeg}{Eurico Zimbres/Commons}}}
 			\end{figure}
 		\end{column}
 		\begin{column}{.6\textwidth}
 			\begin{figure}
 				\adjincludegraphics[height=.4\textheight]{img/wolframite2.jpg}
+				\caption*{Wolframit, Horní Slavkov.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:IMGP2021437_(50657218362).jpg}{Jan Helebrant/Commons}}}
 			\end{figure}
 		\end{column}
 	\end{columns}
@@ -546,11 +571,12 @@
 		\begin{column}{.5\textwidth}
 			\begin{figure}
 				\adjincludegraphics[height=.4\textheight]{img/Scheelite.jpg}
+				\caption*{Scheelit a fluorit.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Fluorite-Scheelite-235544.jpg}{Robert M. Lavinsky/Commons}}}
 			\end{figure}
 		\end{column}
 		\begin{column}{.5\textwidth}
 			\begin{figure}
-				\adjincludegraphics[height=.4\textheight]{img/Fluorite-Scheelite-cflo37a.jpg}
+				\adjincludegraphics[height=.4\textheight]{img/Fluorite-Scheelite-cflo37a.jpg}\caption*{Scheelit na muskovitu.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Scheelite_MHNT.MIN.2004.0.88_(p).jpg}{Didier Descouens/Commons}}}
 			\end{figure}
 		\end{column}
 	\end{columns}
