obrázky, drobné úpravy

--- a/CrMoW.tex
+++ b/CrMoW.tex
@@ -587,7 +587,7 @@
 	\frametitle{}
 	\vfill
 	\begin{itemize}
-		\item Výchozí surovinou pro kovový wolfram je hydratovaný oxid wolframový, který se označuje jako \textit{wolframová kyselina}.
+		\item Výchozí surovinou pro kovový wolfram je hydratovaný oxid wolframový (\ce{WO3.H2O} nebo \ce{WO3.1/2H2O}), který se označuje jako \textit{wolframová kyselina}.
 		\item Připravuje se buď tavením wolframitu s NaOH a loužením taveniny vodou a kyselinou nebo reakcí scheelitu s kyselinou chlorovodíkovou.
 		\item Kyselina wolframová se následně praží, čímž získáme \ce{WO3}.
 		\item Redukcí vodíkem nebo uhlíkem získáme práškový wolfram.
@@ -608,7 +608,8 @@
 		\item Postupů chromování je mnoho, vychází se buď z šestimocného chromu (\ce{CrO3}) nebo trojmocného (\ce{CrCl3}, \ce{Cr2(SO4)3}).
 	\end{itemize}
 	\begin{figure}
-		\adjincludegraphics[height=.4\textheight]{img/Motorcycle_Reflections.jpg}
+		\adjincludegraphics[height=.3\textheight]{img/Motorcycle_Reflections.jpg}
+		\caption*{Chromování na motocyklu.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Motorcycle_Reflections_bw_edit.jpg}{Atoma/Commons}}}
 	\end{figure}
 	\vfill
 }
@@ -627,24 +628,32 @@
 	\item Nerezová ocel se využívá v architektuře, medicíně, chemickém a petrochemickém průmyslu, vodním potrubí, automobilovém průmyslu, atd.
 	\end{itemize}
 	\begin{figure}
-		\adjincludegraphics[height=.4\textheight]{img/ChamberWindow.jpg}
+		\adjincludegraphics[height=.28\textheight]{img/ChamberWindow.jpg}
+		\caption*{Vakuová aparatura z nerezové oceli.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:ChamberWindow.JPG}{Eric Magnan/Commons}}}
 	\end{figure}
 	\vfill
 }
 
 \frame{
 	\frametitle{}
-	\vfill
-	\begin{itemize}
-		\item Korund dopovaný chromem má rudou barvu, označuje se jako \textit{rubín}.
-		\item Využívá se jako aktivní prostředí pro pevnolátkové lasery.\footnote[frame]{\href{https://doi.org/10.1038/187493a0}{Stimulated Optical Radiation in Ruby}}
-		\item Toxicity sloučenin \ce{Cr^{VI}} se využívá při konzervaci dřeva a ochraně před termity a houbami.
-		\item Oxid chromitý se dříve využíval ve vysokoteplotních aplikacích, např. v pecích, formách pro vypalování, apod. Vzhledem k možnosti vzniku toxických \ce{Cr^{VI}} sloučenin se od tohoto využití upouští.
-	\end{itemize}
-	\begin{figure}
-		\adjincludegraphics[height=.4\textheight]{img/Corundum-215330.jpg}
-	\end{figure}
-	\vfill
+	\begin{columns}
+		\begin{column}{.7\textwidth}
+			\vfill
+			\begin{itemize}
+				\item Korund dopovaný chromem má rudou barvu, označuje se jako \textit{rubín}.
+				\item Využívá se jako aktivní prostředí pro pevnolátkové lasery.\footnote[frame]{\href{https://doi.org/10.1038/187493a0}{Stimulated Optical Radiation in Ruby}}
+				\item Toxicity sloučenin \ce{Cr^{VI}} se využívá při konzervaci dřeva a ochraně před termity a houbami.
+				\item Oxid chromitý se dříve využíval ve vysokoteplotních aplikacích, např. v pecích, formách pro vypalování, apod. Vzhledem k možnosti vzniku toxických \ce{Cr^{VI}} sloučenin se od tohoto využití upouští.
+			\end{itemize}
+			\vfill
+		\end{column}
+		\begin{column}{.35\textwidth}
+			\begin{figure}
+				\adjincludegraphics[width=\textwidth]{img/Corundum-215330.jpg}
+				\caption*{Rubín.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Corundum-215330.jpg}{Robert M. Lavinsky/Commons}}}
+			\end{figure}
+		\end{column}
+	\end{columns}
 }
 
 \frame{
@@ -671,9 +680,9 @@
 		\item Molybden má velmi dobrou teplotní odolnost a malou teplotní roztažnost, což rozšiřuje aplikační možnosti, tyto slitiny lze využívat pro konstrukci vojenských pancéřování, součástí letadel, elektrických kontaktů, motorů, atd.
 		\item Molybdenové oceli mají vysokou odolnost vůči korozi, používají s v rychlořezných a dalších náročných aplikacích.
 		\item Kovový molybden se využívá jako katalyzátor pro chemiluminiscenční detekci \ce{NO_x}:\footnote[frame]{\href{https://doi.org/10.1023/A:1010730821844}{Monitoring of Atmospheric Behaviour of NOx from Vehicular Traffic}}
-		\item \ce{2 NO2 + Mo ->[320 $^\circ$C] NO + MoO3}
+		\item \ce{3 NO2 + Mo ->[320 $^\circ$C] 3 NO + MoO3}
 		\item \ce{NO + O3 -> NO$_2^*$ + O2}
-		\item \ce{NO$_2^*$ -> NO2 + h\nu}
+		\item \ce{NO$_2^*$ -> NO2 + h$\nu$}
 	\end{itemize}
 	\vfill
 }
@@ -712,12 +721,14 @@
 	\begin{columns}
 	\begin{column}{.5\textwidth}
 	\begin{figure}
-		\adjincludegraphics[height=.4\textheight]{img/Quadro40.jpg}
+		\adjincludegraphics[height=.28\textheight]{img/Quadro40.jpg}
+		\caption*{Vrták z Wc-Co.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Quadro40.JPG}{Horst/Commons}}}
 	\end{figure}
 	\end{column}
 		\begin{column}{.5\textwidth}
 		\begin{figure}
-			\adjincludegraphics[height=.4\textheight]{img/Inserti_widia.jpg}
+			\adjincludegraphics[height=.28\textheight]{img/Inserti_widia.jpg}
+			\caption*{Pilový kotouč WIDIA.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Inserti_widia.jpg}{Basilicofresco/Commons}}}
 		\end{figure}
 	\end{column}
 	\end{columns}
@@ -732,7 +743,7 @@
 	\begin{itemize}
 		\item Díky vysoké hustotě může nahradit ochuzený uran v podkaliberních střelách.
 		\item Tyto střely neobsahují explozivní nálož, ale slouží k proražení objektu využitím kinetické energie projektilu.
-		\item $E_k = \frac{1}{2}mv^2$
+		\item \ce{E_k = 1/2 mv^2}
 		\item Aby bylo dosaženo maximální kinetické energie je nutné, aby měl projektil vysokou hmotnost a rychlost.
 		\item Pro maximalizaci průraznosti projektilu je jeho tvar podobný dlouhému hrotu.
 		\item Délka projektilu určuje maximální hloubku penetrace.
@@ -740,7 +751,8 @@
 	\end{column}
 	\begin{column}{.2\textwidth}
 	\begin{figure}
-		\adjincludegraphics[height=.7\textheight]{img/APFSDS-T-01.jpg}
+		\adjincludegraphics[height=.6\textheight]{img/APFSDS-T-01.jpg}
+		\caption*{Podkaliberní střela.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:APFSDS-T-01.jpg}{Spike78/Commons}}}
 	\end{figure}
 	\end{column}
 	\end{columns}
@@ -755,7 +767,8 @@
 		\item Wolframová topná tělesa se využívají v pecích do velmi vysokých teplot (až 2800~$^\circ$C).
 	\end{itemize}
 	\begin{figure}
-		\adjincludegraphics[height=.55\textheight]{img/Electric_bulb_filament.jpg}
+		\adjincludegraphics[height=.5\textheight]{img/Electric_bulb_filament.jpg}
+		\caption*{Wolframové vlákno.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Electric_bulb_filament.jpg}{Arnoldius/Commons}}}
 	\end{figure}
 	\vfill
 }
@@ -854,10 +867,10 @@
 			\vfill
 		\end{column}
 		\begin{column}{0.5\textwidth}
-			\begin{center}
-				\adjincludegraphics[width=0.9\textwidth]{img/Potassium-graphite-xtal-3D-SF-A.png}
-				Krystalová struktura \ce{KC8}, fialové kuličky představují ionty \ce{K+}
-			\end{center}
+			\begin{figure}
+				\adjincludegraphics[width=0.8\textwidth]{img/Potassium-graphite-xtal-3D-SF-A.png}
+				\caption*{Krystalová struktura \ce{KC8}, fialové kuličky představují ionty \ce{K+}.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Potassium-graphite-xtal-3D-SF-A.png}{Ben Mills/Commons}}}
+			\end{figure}
 		\end{column}
 	\end{columns}
 }
@@ -866,7 +879,8 @@
 	\frametitle{}
 	\vfill
 	\begin{figure}
-		\adjincludegraphics[height=.8\textheight]{img/Ar2Cr2PP.png}
+		\adjincludegraphics[height=.7\textheight]{img/Ar2Cr2PP.png}
+		\caption*{Paterná vazba.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Ar2Cr2PP.svg}{Benrr101/Commons}}}
 	\end{figure}
 	\vfill
 }
@@ -875,16 +889,8 @@
 	\frametitle{}
 	\vfill
 	\begin{figure}
-		\adjincludegraphics[height=.8\textheight]{img/Quintuple_bond_MO_diagram.png}
-	\end{figure}
-	\vfill
-}
-
-\frame{
-	\frametitle{}
-	\vfill
-	\begin{figure}
-		\adjincludegraphics[height=.8\textheight]{img/Quintuple_bond_orbital_diagram2.png}
+		\adjincludegraphics[height=.7\textheight]{img/Quintuple_bond_MO_diagram.png}
+		\caption*{MO diagram paterné vazby.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Quintuple_bond_MO_diagram.png}{Jeremyi77/Commons}}}
 	\end{figure}
 	\vfill
 }
@@ -892,24 +898,30 @@
 \subsection{Octan chromnatý}
 \frame{
 	\frametitle{}
+	\vfill
+	\begin{itemize}
+		\item \textit{Octan chromnatý} je příkladem sloučeniny \ce{Cr^{II}} se čtvernou vazbou mezi atomy chromu.
+		\item Vytváří krystalický dihydrát \ce{Cr2(CH3COO)4(H2O)2}.
+		\item Připravuje se redukcí chloridu chromitého zinkem a následnou reakcí s octanem sodným. Z~vodného roztoku se sráží ve formě červeného prášku.\footnote[frame]{\href{https://doi.org/10.1002/9780470132395.ch33}{Anyhdrous Chromium(II) Acetate, Chromium(II) Acetate 1-Hydrate, and Bis(2,4-Pentanedionato)Chromium (II)}}
+		\item \ce{2 CrCl3 + Zn -> 2 CrCl2 + ZnCl2}
+		\item \ce{2 CrCl2 + 4 CH3COONa + 2 H2O -> Cr2(CH3COO)4(H2O)2}
+	\end{itemize}
+	\vfill
+}
+
+\frame{
+	\frametitle{}
 	\begin{columns}
-		\begin{column}{0.7\textwidth}
-			\vfill
-			\begin{itemize}
-				\item \textit{Octan chromnatý} je příkladem sloučeniny \ce{Cr^{II}} se čtvernou vazbou mezi atomy chromu.
-				\item Vytváří krystalický dihydrát \ce{Cr2(CH3COO)4(H2O)2}.
-				\item Připravuje se redukcí chloridu chromitého zinkem a následnou reakcí s octanem sodným. Z~vodného roztoku se sráží ve formě červeného prášku.\footnote[frame]{\href{https://doi.org/10.1002/9780470132395.ch33}{Anyhdrous Chromium(II) Acetate, Chromium(II) Acetate 1-Hydrate, and Bis(2,4-Pentanedionato)Chromium (II)}}
-				\item \ce{2 CrCl3 + Zn -> 2 CrCl2 + ZnCl2}
-				\item \ce{2 CrCl2 + 4 CH3COONa + 2 H2O -> Cr2(CH3COO)4(H2O)2}
-			\end{itemize}
-			\vfill
-		\end{column}
-		\begin{column}{0.35\textwidth}
+		\begin{column}{0.6\textwidth}
 			\begin{figure}
 				\adjincludegraphics[width=\textwidth]{img/Cr2(OAc)4.png}
+				\caption*{Octan chromnatý.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Cr2(OAc)4.svg}{Smokefoot/Commons}}}
 			\end{figure}
+		\end{column}
+		\begin{column}{0.4\textwidth}
 			\begin{figure}
-				\adjincludegraphics[width=\textwidth]{img/Chromium(II)-acetate-dimer-3D-balls.png}
+				\adjincludegraphics[height=.4\textheight]{img/Chromium(II)-acetate-dimer-3D-balls.png}
+				\caption*{Kuličkový model octanu chromnatého.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Chromium(II)-acetate-dimer-3D-balls.png}{Ben Mills/Commons}}}
 			\end{figure}
 		\end{column}
 	\end{columns}
@@ -986,7 +998,7 @@
 \frame{
 	\frametitle{}
 	\vfill
-	Sopka -- termický rozklad dichromanu amonného
+	Sopka -- termický rozklad dichromanu amonného\footnote[frame]{\href{https://commons.wikimedia.org/wiki/File:Thermal_decomposition_of_ammonium_dichromate_(1).jpg}{Zdroj: Rando Tuvikene/Commons}}$^,$\footnote[frame]{\href{https://commons.wikimedia.org/wiki/File:Thermal_decomposition_of_ammonium_dichromate_(2).jpg}{Zdroj: Rando Tuvikene/Commons}}$^,$\footnote[frame]{\href{https://commons.wikimedia.org/wiki/File:Thermal_decomposition_of_ammonium_dichromate_(3).jpg}{Zdroj: Rando Tuvikene/Commons}}
 	\begin{columns}
 		\begin{column}{.33\textwidth}
 			\begin{figure}
@@ -1034,7 +1046,7 @@
 	\vfill
 	\begin{figure}
 		\adjincludegraphics[width=\textwidth]{img/Polyederstrukturen_Molybdän.png}
-		\caption*{a) \ce{Mo6O$_{19}^{2-}$}; b) \ce{Mo7O$_{24}^{6-}$}}
+		\caption*{a) \ce{Mo6O$_{19}^{2-}$}; b) \ce{Mo7O$_{24}^{6-}$}.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Polyederstrukturen_Molybd\%C3\%A4n.png}{Ichwarsnur/Commons}}}
 	\end{figure}
 	\vfill
 }
@@ -1044,7 +1056,7 @@
 	\vfill
 	\begin{figure}
 		\adjincludegraphics[height=.7\textheight]{img/Hexatungstate-from-xtal-3D-polyhedra.png}
-		\caption*{\ce{W6O$_{19}^{2-}$}}
+		\caption*{\ce{W6O$_{19}^{2-}$}.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Hexatungstate-from-xtal-3D-polyhedra.png}{Ben Mills/Commons}}}
 	\end{figure}
 	\vfill
 }
@@ -1070,7 +1082,7 @@
 	\vfill
 	\begin{figure}
 		\adjincludegraphics[height=.7\textheight]{img/Phosphotungstate-3D-polyhedra.png}
-		\caption*{Struktura heteropolyaniontu \ce{[PW12O40]^{3-}}}
+		\caption*{Struktura heteropolyaniontu \ce{[PW12O40]^{3-}}.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Phosphotungstate-3D-polyhedra.png}{Benjah-bmm27/Commons}}}
 	\end{figure}
 	\vfill
 }
@@ -1105,7 +1117,8 @@
 		\item V bulkovém stavu je diamagnetický a jde o nepřímý polovodič.\footnote[frame]{Přechod mezi pásy je spojen se změnou hybnosti, proto jde o nezářivé přechody.}
 	\end{itemize}
 	\begin{figure}
-		\adjincludegraphics[width=.85\textwidth]{img/Molybdenite-3D-balls.png}
+		\adjincludegraphics[width=.8\textwidth]{img/Molybdenite-3D-balls.png}
+		\caption*{Kuličkový model \ce{MoS2}.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Molybdenite-3D-balls.png}{Benjah-bmm27/Commons}}}
 	\end{figure}
 	\vfill
 }
@@ -1119,7 +1132,7 @@
 		\item Pokud odstraníme interakce mezi vrstvami, získáme přímý polovodič se šířkou zakázaného pásu odpovídající červené barvě.\footnote[frame]{\href{https://www.ossila.com/pages/molybdenum-disulfide-mos2}{Molybdenum Disulfide (\ce{MoS2}):Theory and Applications}}
 	\end{itemize}
 	\begin{figure}
-		\adjincludegraphics[width=\textwidth]{img/MoS2-monolayer-and-bulk-band-structure.png}
+		\adjincludegraphics[width=.85\textwidth]{img/MoS2-monolayer-and-bulk-band-structure.png}
 	\end{figure}
 	\vfill
 }
@@ -1219,6 +1232,7 @@
 
 	\begin{figure}
 		\adjincludegraphics[height=.5\textheight]{img/AOR_Mechanism.jpg}
+		\caption*{Mechanismus funkce aldehyd ferredoxin oxidoreduktázy.\footnote[frame]{Zdroj: \href{https://en.wikipedia.org/wiki/Aldehyde_ferredoxin_oxidoreductase}{	jejeni6/Commons}}}
 	\end{figure}
 	\vfill
 }
