--- a/CrMoW.tex
+++ b/CrMoW.tex
@@ -202,6 +202,7 @@
 		\item V přítomnosti vodní páry vzniká oxid-hydroxid:
 		\item \ce{SgO3 + H2O -> SgO2(OH)2}
 		\item V roce 2014 se povedlo připravit hexakarbonyl \ce{[Sg(CO)6]}.\footnote[frame]{\href{https://doi.org/10.1126/science.1255720}{Synthesis and detection of a seaborgium carbonyl complex}}
+		\item \ce{Sg + 6 CO -> [Sg(CO)6]}
 	\end{itemize}
 	\vfill
 }
@@ -352,7 +353,7 @@
 		\item Redukcí chromitu (\ce{FeCr2O4}) uhlíkem získáme slitinu ferrochrom (FeCr).
 		\item Zpravidla obsahuje 50--70~\% chromu.
 		\item Redukce se provádí buď v elektrickém oblouku nebo elektrické peci, vyžaduje velké množství energie.
-		\item Většina vyrobeného ferrochromu se využívá pro výrobu nerezové oceli, která obsahuje přibližně 18~\% chromu.
+		\item Většina vyrobeného ferrochromu se využívá pro výrobu nerezové oceli, která obsahuje přibližně 18~\% chromu.\footnote[frame]{\href{https://www.fasteners-cz.cz/druhy-nerezove-oceli-priklady-jejiho-uziti}{Druhy nerezové oceli a příklady jejího užití}}
 	\end{itemize}
 	\begin{figure}
 		\adjincludegraphics[height=.35\textheight]{img/Ferrochrome.jpg}
@@ -496,7 +497,7 @@
 		\item Sulfid se nejprve přečistí flotací a poté se praží na vzduchu:
 		\item \ce{2 MoS2 + 7 O2 ->[700 $^\circ$C] 2 MoO3 + 4 SO2}
 		\item Oxid se extrahuje vodným roztokem amoniaku, tím se odstraní část mědi a molybden přejde na molybdenan:
-		\item \ce{MoO3 + 2 NH3 + H2O -> (NH4)2(MoO4)}
+		\item \ce{MoO3 + 2 NH3 + H2O -> (NH4)2MoO4}
 		\item Zbytek mědi je vysrážen sulfanem. Molybdenan přejde, v závislosti na podmínkách, na dimolybdenan (\ce{(NH4)2Mo2O7}) nebo heptamolybdenan (\ce{(NH4)6Mo7O24}).
 		\item Kalcinací získáme oxid molybdenový, který je možné přečistit sublimací při teplotě 1100~$^\circ$C.
 		\item \ce{(NH4)2Mo2O7 -> 2 MoO3 + 2 NH3 + H2O}
@@ -904,7 +905,7 @@
 		\item Vytváří krystalický dihydrát \ce{Cr2(CH3COO)4(H2O)2}.
 		\item Připravuje se redukcí chloridu chromitého zinkem a následnou reakcí s octanem sodným. Z~vodného roztoku se sráží ve formě červeného prášku.\footnote[frame]{\href{https://doi.org/10.1002/9780470132395.ch33}{Anyhdrous Chromium(II) Acetate, Chromium(II) Acetate 1-Hydrate, and Bis(2,4-Pentanedionato)Chromium (II)}}
 		\item \ce{2 CrCl3 + Zn -> 2 CrCl2 + ZnCl2}
-		\item \ce{2 CrCl2 + 4 CH3COONa + 2 H2O -> Cr2(CH3COO)4(H2O)2}
+		\item \footnotesize \ce{2 CrCl2 + 4 CH3COONa + 2 H2O -> Cr2(CH3COO)4(H2O)2 + 4 NaCl}
 	\end{itemize}
 	\vfill
 }
@@ -931,20 +932,19 @@
 \frame{
 	\frametitle{}
 	\vfill
+	\textbf{Isopolyanionty}
 	\begin{itemize}
 		\item Okyselením roztoku alkalického chromanu získáme roztok dichromanu.
 		\item Tato změna se projeví i změnou barvy ze žluté na oranžovou.
 		\item Proces je reverzibilní a lze ho popsat poměrně složitým systémem rovnováh.
 	\end{itemize}
-
 	\begin{align*}
-		\ce{HCrO$^-_4$ &<=> CrO$^{2-}_4$ + H^+} \\
 		\ce{H2CrO4 &<=> HCrO$^{-}_4$ + H^+} \\
-		\ce{Cr2O7 + H2O &<=> 2 HCrO$^{-}_4$} \\
+		\ce{2 HCrO$^-_4$ &<=> Cr2O$_7^{2-}$ + H2O} \\
+		\ce{Cr2O$_7^{2-}$ + H2O &<=> 2 HCrO$^{-}_4$} \\
 		\ce{HCr2O$_7^-$ &<=> Cr2O$^{2-}_7$ + H^+} \\
 		\ce{H2Cr2O7 &<=> HCr2O$^{-}_7$ + H^+}
 	\end{align*}
-
 	\begin{itemize}
 		\item Polymerizace může dále pokračovat, ale zastavuje se na tri- a tetrachromanech (\ce{Cr3O$^{2-}_{10}$} a \ce{Cr4O$^{2-}_{13}$}).
 		\item Polyanionty jsou tvořeny tetraedry \ce{CrO4} spojenými vrcholem.
@@ -1117,7 +1117,7 @@
 		\item V bulkovém stavu je diamagnetický a jde o nepřímý polovodič.\footnote[frame]{Přechod mezi pásy je spojen se změnou hybnosti, proto jde o nezářivé přechody.}
 	\end{itemize}
 	\begin{figure}
-		\adjincludegraphics[width=.8\textwidth]{img/Molybdenite-3D-balls.png}
+		\adjincludegraphics[width=.68\textwidth]{img/Molybdenite-3D-balls.png}
 		\caption*{Kuličkový model \ce{MoS2}.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Molybdenite-3D-balls.png}{Benjah-bmm27/Commons}}}
 	\end{figure}
 	\vfill
@@ -1217,7 +1217,7 @@
 
 	\begin{figure}
 		\adjincludegraphics[height=.75\textheight]{img/Premature_germination_maize_2014_05_15_10_35_37_7919.jpg}
-		\caption*{Předčasně naklíčená kukuřice.\footnote[frame]{\href{https://commons.wikimedia.org/wiki/File:Premature_germination_maize_2014_05_15_10_35_37_7919.jpg}{Zdroj: Alandmanson/Commons}}}
+		\caption*{Předčasně naklíčená kukuřice.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Premature_germination_maize_2014_05_15_10_35_37_7919.jpg}{Alandmanson/Commons}}}
 	\end{figure}
 	\vfill
 }
@@ -1232,7 +1232,7 @@
 
 	\begin{figure}
 		\adjincludegraphics[height=.5\textheight]{img/AOR_Mechanism.jpg}
-		\caption*{Mechanismus funkce aldehyd ferredoxin oxidoreduktázy.\footnote[frame]{Zdroj: \href{https://en.wikipedia.org/wiki/Aldehyde_ferredoxin_oxidoreductase}{	jejeni6/Commons}}}
+		\caption*{Mechanismus funkce aldehyd ferredoxin oxidoreduktázy.\footnote[frame]{Zdroj: \href{https://en.wikipedia.org/wiki/Aldehyde_ferredoxin_oxidoreductase}{jejeni6/Commons}}}
 	\end{figure}
 	\vfill
 }
