--- a/CrMoW.tex
+++ b/CrMoW.tex
@@ -1112,13 +1112,24 @@
 	\frametitle{}
 	\vfill
 	\begin{itemize}
-		\item Sulfid molybdeničitý, \ce{MoS2}, má vrstevnatou strukturu.
+		\item Sulfid molybdeničitý, \ce{MoS2}, je černý prášek.
+		\item V krystalickém stavu má vrstevnatou strukturu.
 		\item V přírodě se vyskytuje jako minerál molybdenit.
 		\item V bulkovém stavu je diamagnetický a jde o nepřímý polovodič.\footnote[frame]{Přechod mezi pásy je spojen se změnou hybnosti, proto jde o nezářivé přechody.}
 	\end{itemize}
 	\begin{figure}
-		\adjincludegraphics[width=.68\textwidth]{img/Molybdenite-3D-balls.png}
+		\adjincludegraphics[width=.63\textwidth]{img/Molybdenite-3D-balls.png}
 		\caption*{Kuličkový model \ce{MoS2}.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Molybdenite-3D-balls.png}{Benjah-bmm27/Commons}}}
+	\end{figure}
+	\vfill
+}
+
+\frame{
+	\frametitle{}
+	\vfill
+	\begin{figure}
+		\adjincludegraphics[height=.7\textheight]{img/Sample_of_MoS2_powder.jpg}
+		\caption*{Práškový sulfid molybdeničitý, \ce{MoS2}}
 	\end{figure}
 	\vfill
 }
